@@ -1,9 +1,11 @@
 package com.axonivy.connector.keycloak.demo.bean;
 
+import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -12,6 +14,7 @@ import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -19,6 +22,7 @@ import java.util.zip.ZipOutputStream;
 import javax.faces.bean.ManagedBean;
 import javax.faces.bean.ViewScoped;
 
+import org.primefaces.event.FileUploadEvent;
 import org.primefaces.model.DefaultStreamedContent;
 import org.primefaces.model.StreamedContent;
 import org.primefaces.model.file.UploadedFile;
@@ -26,33 +30,41 @@ import org.primefaces.model.file.UploadedFile;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import ch.ivyteam.ivy.environment.Ivy;
-
 @ViewScoped
 @ManagedBean
 public class AdminManagementBean {
   private UploadedFile file;
   private StreamedContent theme;
   private String referenceTheme;
-  private static final String BASE_LOGIN_FTL_PATH = "/opt/keycloak/themes/base/login/login.ftl";
+  private static final String LOGIN_FTL_PATH = "theme/%s/login/login.ftl";
+  private static final String DEFAULT_REGISTER_URL_KEY = "${url.registration}";
+  private static final String CUSTOM_THEME_LOGIN_TEMPLATE_PATH = "custom-theme/login/login.ftl";
+  private static final String AVAILABLE_THEME_PATH = "META-INF/keycloak-themes.json";
+  private static final String CUSTOM_THEME_PROPERTY_TEMPLATE_PATH = "custom-theme/login/theme.properties";
+  private static final String THEME_PROPERTIES_CONTENT = "parent=%s\nimport=common/keycloak\n";
+
+  private List<String> themes;
+  private String registerUrl;
 
   public void upload() {
-    Ivy.log().warn(file.getFileName());
+    createCustomThemeAsZip();
   }
 
-  public List<String> getReferenceThemes() {
-    Ivy.log().warn("readThemesFromJar");
-    List<String> referenceThemes = new ArrayList<>();
+
+
+  public List<String> readJarFile(FileUploadEvent event) {
+    this.file = event.getFile();
+    themes = new ArrayList<>();
     if (Objects.isNull(file)) {
-      return referenceThemes;
+      return themes;
     }
 
     try (InputStream inputStream = file.getInputStream()) {
-      Path tempFile = java.nio.file.Files.createTempFile("keycloakThemes", ".jar");
+      Path tempFile = Files.createTempFile("keycloakThemes", ".jar");
       Files.copy(inputStream, tempFile, StandardCopyOption.REPLACE_EXISTING);
 
       try (JarFile jarFile = new JarFile(tempFile.toFile())) {
-        ZipEntry themesEntry = jarFile.getEntry("META-INF/keycloak-themes.json");
+        ZipEntry themesEntry = jarFile.getEntry(AVAILABLE_THEME_PATH);
 
         if (themesEntry != null) {
           try (InputStream themesInputStream = jarFile.getInputStream(themesEntry)) {
@@ -63,7 +75,7 @@ public class AdminManagementBean {
               for (JsonNode themeNode : themesNode) {
                 JsonNode nameNode = themeNode.path("name");
                 if (nameNode.isTextual()) {
-                  referenceThemes.add(nameNode.asText());
+                  themes.add(nameNode.asText());
                 }
               }
             }
@@ -71,48 +83,81 @@ public class AdminManagementBean {
         }
       }
       Files.deleteIfExists(tempFile);
-
     } catch (IOException e) {
       e.printStackTrace();
     }
-    return referenceThemes;
+    return themes;
   }
 
   public void updateThemes() {
 
   }
 
-  public StreamedContent createCustomThemeAsZip(String themeName) {
+  public StreamedContent createCustomThemeAsZip() {
     try {
       ByteArrayOutputStream baos = new ByteArrayOutputStream();
       try (ZipOutputStream zipOutputStream = new ZipOutputStream(baos)) {
-        addModifiedLoginFtlToZip(zipOutputStream, themeName);
-        addThemePropertiesToZip(zipOutputStream, themeName);
+        addModifiedLoginFtlToZip(zipOutputStream);
+        addThemePropertiesToZip(zipOutputStream);
       }
       byte[] zipBytes = baos.toByteArray();
       ByteArrayInputStream inputStream = new ByteArrayInputStream(zipBytes);
 
-      return DefaultStreamedContent.builder().contentType("application/zip").name(themeName + "-theme.zip")
+      return DefaultStreamedContent.builder().contentType("application/zip").name("custom-theme.zip")
           .stream(() -> inputStream).build();
     } catch (IOException e) {
       throw new RuntimeException("Error creating theme ZIP: " + e.getMessage(), e);
     }
   }
 
-  private void addModifiedLoginFtlToZip(ZipOutputStream zipOutputStream, String themeName) throws IOException {
-    String content = Files.readString(Paths.get(BASE_LOGIN_FTL_PATH), StandardCharsets.UTF_8);
-    String modifiedContent = content.replace("<a href=\"${url.registration}\">", "<a href=\"test\">");
-    ZipEntry entry = new ZipEntry(themeName + "/login/login.ftl");
+  private String getFileContentFromJar(String filePath) {
+    if (file == null || filePath == null || filePath.isEmpty()) {
+      return null;
+    }
+
+    try {
+      Path tempFile = Files.createTempFile("uploadedJar", ".jar");
+      Files.write(tempFile, file.getContent());
+
+      try (JarFile jarFile = new JarFile(tempFile.toFile())) {
+        JarEntry entry = jarFile.getJarEntry(filePath);
+        if (entry == null) {
+          Files.deleteIfExists(tempFile);
+          return null;
+        }
+
+        try (BufferedReader reader = new BufferedReader(
+            new InputStreamReader(jarFile.getInputStream(entry), StandardCharsets.UTF_8))) {
+          StringBuilder content = new StringBuilder();
+          String line;
+          while ((line = reader.readLine()) != null) {
+            content.append(line).append("\n");
+          }
+          Files.deleteIfExists(tempFile);
+          return content.toString();
+        }
+      } finally {
+        Files.deleteIfExists(tempFile);
+      }
+    } catch (IOException e) {
+      e.printStackTrace();
+      return null;
+
+    }
+  }
+
+  private void addModifiedLoginFtlToZip(ZipOutputStream zipOutputStream) throws IOException {
+    String content = getFileContentFromJar(String.format(LOGIN_FTL_PATH, referenceTheme));
+    String modifiedContent = content.replace(DEFAULT_REGISTER_URL_KEY, registerUrl);
+    ZipEntry entry = new ZipEntry(CUSTOM_THEME_LOGIN_TEMPLATE_PATH);
     zipOutputStream.putNextEntry(entry);
     zipOutputStream.write(modifiedContent.getBytes(StandardCharsets.UTF_8));
     zipOutputStream.closeEntry();
   }
 
-  private void addThemePropertiesToZip(ZipOutputStream zipOutputStream, String themeName) throws IOException {
-    String propertiesContent = "parent=base\n" + "import=common/keycloak\n";
-
-    // Add theme.properties to the ZIP at the theme root
-    ZipEntry entry = new ZipEntry(themeName + "/theme.properties");
+  private void addThemePropertiesToZip(ZipOutputStream zipOutputStream) throws IOException {
+    String propertiesContent = String.format(THEME_PROPERTIES_CONTENT, referenceTheme);
+    ZipEntry entry = new ZipEntry(CUSTOM_THEME_PROPERTY_TEMPLATE_PATH);
     zipOutputStream.putNextEntry(entry);
     zipOutputStream.write(propertiesContent.getBytes(StandardCharsets.UTF_8));
     zipOutputStream.closeEntry();
@@ -140,5 +185,21 @@ public class AdminManagementBean {
 
   public String getReferenceTheme() {
     return referenceTheme;
+  }
+
+  public List<String> getThemes() {
+    return themes;
+  }
+
+  public void setThemes(List<String> themes) {
+    this.themes = themes;
+  }
+
+  public String getRegisterUrl() {
+    return registerUrl;
+  }
+
+  public void setRegisterUrl(String registerUrl) {
+    this.registerUrl = registerUrl;
   }
 }
